# too-many-voxels

./: CMakeLists.txt  LICENSE.txt  README.md
assets/shaders/: crosshairfragment.glsl  crosshairvertex.glsl  fragment.glsl  outlinefragment.glsl  outlinevertex.glsl  vertex.glsl
src/: block.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  main.cpp  main.h  world.cpp  world.h
src/utils/: camera.cpp  camera.h  common.h  shader.cpp  shader.h
